lib/GSL/Special/bessel.h

int gsl_sf_bessel_Inu_scaled_e(double nu,double x,double* result);
double gsl_sf_bessel_Inu_scaled(double nu,double x);
int gsl_sf_bessel_Inu_e(double nu,double x,double* result);
double gsl_sf_bessel_Inu(double nu,double x);
int gsl_sf_bessel_Knu_scaled_e(double nu,double x,double* result);
double gsl_sf_bessel_Knu_scaled(double nu,double x);
int gsl_sf_bessel_Knu_e(double nu,double x,double* result);
double gsl_sf_bessel_Knu(double nu,double x);
int gsl_sf_bessel_lnKnu_e(double nu,double x,double* result);
double gsl_sf_bessel_lnKnu(double nu,double x);
int gsl_sf_bessel_zero_J0_e(int s,double* result);
double gsl_sf_bessel_zero_J0(int s);
int gsl_sf_bessel_zero_J1_e(int s,double* result);
double gsl_sf_bessel_zero_J1(int s);
int gsl_sf_bessel_zero_Jnu_e(double nu,int s,double* result);
double gsl_sf_bessel_zero_Jnu(double nu,int s);